--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </nav>
     <section>
         <div class="main-image">
-            <img src="./image/hero (1).jpg" alt="">
+            <img src="./hero (1).jpg" alt="">
         </div>
     </section>
     <section>
@@ -45,7 +45,7 @@
             </div>
 
 
-            <img src="./image/hero (1)0.jpg" alt="">
+            <img src="./hero (1)0.jpg" alt="">
 
 
 
@@ -54,7 +54,7 @@
     </section>
     <section class="model">
         <div class="model_heading">
-            <img src="./image/okinawa-trans-text.png" alt="">
+            <img src="./okinawa-trans-text.png" alt="">
             <h2>Built for generations!</h2>
         </div>
         <div class="model">
@@ -65,42 +65,42 @@
         <div class="flex">
             <div class="card">
                 <div class="card-content">
-                    <img src="./image/ridge-plus.png" alt="">
+                    <img src="./ridge-plus.png" alt="">
                 </div>
                 <p>Ridge+</p>
                 <p> 79,999</p>
             </div>
             <div class="card">
                 <div class="card-content">
-                    <img src="./image/ridge-plus.png" alt="">
+                    <img src="./ridge-plus.png" alt="">
                 </div>
                 <p>Ridge+</p>
                 <p> 79,999</p>
             </div>
             <div class="card">
                 <div class="card-content">
-                    <img src="./image/ridge-plus.png" alt="">
+                    <img src="./ridge-plus.png" alt="">
                 </div>
                 <p>Ridge+</p>
                 <p> 79,999</p>
             </div>
             <div class="card">
                 <div class="card-content">
-                    <img src="./image/ridge-plus.png" alt="">
+                    <img src="./ridge-plus.png" alt="">
                 </div>
                 <p>Ridge+</p>
                 <p> 79,999</p>
             </div>
             <div class="card">
                 <div class="card-content">
-                    <img src="./image/ridge-plus.png" alt="">
+                    <img src="./ridge-plus.png" alt="">
                 </div>
                 <p>Ridge+</p>
                 <p> 79,999</p>
             </div>
             <div class="card">
                 <div class="card-content">
-                    <img src="./image/ridge-plus.png" alt="">
+                    <img src="./ridge-plus.png" alt="">
                 </div>
                 <p>Ridge+</p>
                 <p> 79,999</p>
@@ -114,39 +114,39 @@
         <h2>Our Happy 😊 customers</h2>
         <div class="flex1">
             <div class="cust">
-                <img src="./image/customer (1).jpg" alt="">
+                <img src="./customer (1).jpg" alt="">
             </div>
             <div class="cust">
 
-                <img src="./image/customer (1).jpg" alt="">
+                <img src="./customer (1).jpg" alt="">
             </div>
             <div class="cust">
 
-                <img src="./image/customer (1).jpg" alt="">
+                <img src="./customer (1).jpg" alt="">
             </div>
             <div class="cust">
 
-                <img src="./image/customer (1).jpg" alt="">
+                <img src="./customer (1).jpg" alt="">
             </div>
             <div class="cust">
 
-                <img src="./image/customer (1).jpg" alt="">
+                <img src="./customer (1).jpg" alt="">
             </div>
             <div class="cust">
 
-                <img src="./image/customer (1).jpg" alt="">
+                <img src="./customer (1).jpg" alt="">
             </div>
             <div class="cust">
 
-                <img src="./image/customer (1).jpg" alt="">
+                <img src="./customer (1).jpg" alt="">
             </div>
             <div class="cust">
 
-                <img src="./image/customer (1).jpg" alt="">
+                <img src="./customer (1).jpg" alt="">
             </div>
             <div class="cust">
 
-                <img src="./image/customer (1).jpg" alt="">
+                <img src="./customer (1).jpg" alt="">
             </div>
 
         </div>
@@ -160,8 +160,8 @@
 
 
         <div class="s-img">
-            <img src="./image/swag (1).jpg" alt="">
-            <img src="./image/swag (2).jpg" alt="">
+            <img src="./swag (1).jpg" alt="">
+            <img src="./swag (2).jpg" alt="">
         </div>
     </section>
     <section class="charge-home">
@@ -175,27 +175,27 @@
                     <p class="small"> Make your journey</p>
                     <p class="large">non stop 😍 </p>
                 </div>
-                <img src="./image/charge-img.jpg" alt="">
+                <img src="./charge-img.jpg" alt="">
             </div>
         </div>
     </section>
     <section style="text-align: center;">
-        <img src="./image/make-in-india.jpg" width="100%" alt="">
-        <img src="./image/sahi.jpg" width="100%" alt="">
+        <img src="./make-in-india.jpg" width="100%" alt="">
+        <img src="./sahi.jpg" width="100%" alt="">
     </section>
     <section class="smart-bike">
         <h2>Smart Bike,Smart App</h2>
-        <img src="./image/app.png" width="100%" alt="">
+        <img src="./app.png" width="100%" alt="">
 
     </section>
     <section class="helmet">
-        <img src="./image/helmet.jpg " width="100%" alt="">
+        <img src="./helmet.jpg " width="100%" alt="">
     </section>
     <section class="address">
         <h2>Our Address</h2>
         <div class="f10">
             <div style="width: 50%;">
-                <img src="./image/location.png" width="100%" alt="">
+                <img src="./location.png" width="100%" alt="">
             </div>
             <div class="w1">
                 <h4>Maharana Pratap Circle Near Sankalp Hotel </h4>
@@ -208,7 +208,7 @@
         </div>
     </section>
     <section>
-        <div class="center"><img src="./image/custom.png" width="90%" alt=""></div>
+        <div class="center"><img src="./custom.png" width="90%" alt=""></div>
 
     </section>
     <section class="map" id="map">
@@ -227,12 +227,12 @@
 
                 <div class="call">
                     <a href="tel:+919828064351" target="_blank" class="btn">
-                        <img src="./image/call_black_24dp.svg" alt="call ">
+                        <img src="./call_black_24dp.svg" alt="call ">
                     </a>
                 </div>
                 <div class="email">
                     <a href="mailto:naksh.associate@gmail.com" target="_blank" class="btn">
-                        <img src="./image/email_black_24dp.svg" alt="email ">
+                        <img src="./email_black_24dp.svg" alt="email ">
                     </a>
                 </div>
             </div>
